# Projekt

./: Binary.cpp  Binary.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Encryption.cpp  Encryption.hpp  FaceRecognition.cpp  FaceRecognition.hpp  FaceRecognitiondemo.cpp  ImageProcessing.cpp  ImageProcessing.hpp  create_csv.py  dgmain.cpp  encryption.cpp  encryption.hpp  main.cpp  mainwindow.cpp  mainwindow.ui
